--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -2,7 +2,7 @@
 
 /* Download icons font: https://github.com/Templarian/MaterialDesign-Font */
 * {
-  font-family: NotoSans, Material Design Icons Regular;
+  font-family: NotoSans, Iosevka Nerd Font Mono;
   font-size: 14px;
 }
 
@@ -171,9 +171,10 @@ window#waybar {
 #custom-sepRight-alt,
 #custom-sepLeft,
 #custom-sepLeft-alt {
-	font-size: 2.3rem; 
-	font-family: Iosevka;
-	margin-bottom: 5px;
+	font-family: Iosevka Nerd Font Bold; 
+	font-size: 36px; 
+	padding-right: 6px; 
+	margin-bottom: 5px; 
 }
 
 #custom-sepRight, 
