--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -172,8 +172,8 @@ window#waybar {
 #custom-sepLeft,
 #custom-sepLeft-alt {
 	font-family: Iosevka Nerd Font Bold; 
-	font-size: 36px; 
-	padding-right: 6px; 
+	font-size: 30px; 
+	/* padding-right: 6px; */
 	margin-bottom: 5px; 
 }
 
