waybar laptop config

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -162,6 +162,30 @@ window#waybar {
   background-color: @bg;
 }
 
+#network {
+	color: @subtext;
+	background-color: @bg-alt;
+}
+
+#battery,
+#battery.power
+{
+	color: @subtext;
+	background-color: @bg;
+}
+
+#battery.charging {
+	color: @lime;
+}
+
+#battery.warning {
+	color: @orange;
+}
+
+#battery.critical {
+	color: @red;
+}
+
 #custom-notifications {
   color: @subtext;
   background-color: @bg;
